# gw_pypi_testt

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  gdpc.yaml  pyproject.toml
src/gw_pypi_testt/: __init__.py  cli.py
tests/: test_basic.py
